--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Swetha's Portfolio">
         <meta name="author" content="Swetha">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+        <link href="css/index.css" rel="stylesheet">
     </head>
     <body>
         <h1>Swetha Kanneganti</h1>
@@ -18,7 +21,7 @@
         </section>
         <section id="Experience">
             <h2>Experience</h2>
-                <ul>
+                <ul class="exp">
                     <li>
                         <h4>Volunteer Mentor</h4>
                         <p>
@@ -42,7 +45,7 @@
         </section>
         <section id="Connect">
             <h2>Connect</h2>
-                <ul>
+                <ul class="social">
                     <li><a href="https://github.com/sksm07">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/swetha-k-a6b4b9217/">LinkedIn</a></li>                
                 </ul>
