--- a/index.html
+++ b/index.html
@@ -7,15 +7,25 @@
         <meta name="description" content="Swetha's Portfolio">
         <meta name="author" content="Swetha">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
 
         <link href="css/index.css" rel="stylesheet">
     </head>
     <body>
+        <nav id="Navigation">
+            <ul>
+                <li><a href="#About">About</a></li>
+                <li><a href="#Experience">Experience</a></li>
+                <li><a href="#Skills">Skills</a></li>
+                <li><a href="#Projects">Projects</a></li>
+                <li><a href="#Connect">Connect</a></li>
+            </ul>
+        </nav>
         <h1>Swetha Kanneganti</h1>
         <section id="About">
             <h2>About</h2>
                 <p>
-                    A highly skilled Front-End Developer with experience, specializing in building responsive, scalable, and user-friendly web applications. Proficient in JavaScript (ES6+), HTML5, and CSS3, and jQuery to create seamless user experiences. Strong ability to collaborate with cross-functional teams to deliver high-quality software solutions in agile environments. Passionate about writing clean, efficient code and continuously learning new technologies to enhance web performance and usability.
+                    A highly skilled Front-End Developer, specializing in building responsive, scalable, and user-friendly web applications. Proficient in JavaScript (ES6+), HTML5, and CSS3, and jQuery to create seamless user experiences. Strong ability to collaborate with cross-functional teams to deliver high-quality software solutions in agile environments. Passionate about writing clean, efficient code and continuously learning new technologies to enhance web performance and usability.
 
                 </p>
         </section>
@@ -23,31 +33,51 @@
             <h2>Experience</h2>
                 <ul class="exp">
                     <li>
-                        <h4>Volunteer Mentor</h4>
+                        <div class="exp-header">
+                          <h4>Volunteer Mentor</h4>
+                          <h4>(2024)</h4>
+                        </div>
                         <p>
-                            Volunteered as a mentor for a group of three middle school students, teaching not only foundational science concepts but also the basics of web development, including HTML, CSS, and JavaScript
+                            Volunteered as a mentor for a group of three middle school students, teaching not only foundational Science concepts but also the basics of web development, including HTML, CSS, and JavaScript
                         </p>    
                             
                     </li>
                     <li>
-                        <h4>McCombs School of Business</h4>
+                        <div class="exp-header">
+                          <h4>McCombs School of Business</h4>
+                          <h4>(2023)</h4>
+                        </div>
                         <p>
                             Collaborated with fellow learners and mentors to learn cloud basics and build web-based applications, applying HTML, CSS, JavaScript, SQL, and Bootstrap
                         </p>
                     </li>
                     <li>
-                        <h4>Areas of Expertise</h4>
+                        <div class="exp-header">
+                          <h4>Software Engineer</h4>
+                          <h4>(2022)</h4>
+                        </div>  
                         <p>
-                            JavaScript, Bootstrap, SQL, MongoDB, Python, Git, GitHub, OOPs, Data structures,
+                            Worked closely with cross-functional teams to understand the requirements, wrote clean code and involved in debugging and code reviews
                         </p>
-                    </li>
+                    </li>                    
                 </ul>
+        </section>
+        <section id="Skills">
+            <h2>Skills</h2>
+        </section>
+        <section id="Projects">
+            <h2>Projects</h2>
+            <ul></ul>
         </section>
         <section id="Connect">
             <h2>Connect</h2>
                 <ul class="social">
-                    <li><a href="https://github.com/sksm07">GitHub</a></li>
-                    <li><a href="https://www.linkedin.com/in/swetha-k-a6b4b9217/">LinkedIn</a></li>                
+                    <li><a href="https://github.com/sksm07" target="_blank" rel="noopener no-referrer" aria-label="GitHub">
+                        <i class="fab fa-github"></i>
+                    </a></li>
+                    <li><a href="https://www.linkedin.com/in/swetha-k-a6b4b9217/" target="_blank" rel="noopener no-referrer" aria-label="LinkedIn">
+                        <i class="fab fa-linkedin"></i>
+                    </a></li>                
                 </ul>
         </section>
         
