--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
         </section>
         <section id="Skills">
             <h2>Skills</h2>
+            <ul>
+                
+            </ul>
         </section>
         <section id="Projects">
             <h2>Projects</h2>
@@ -80,6 +83,6 @@
                     </a></li>                
                 </ul>
         </section>
-        
+       <script src="js/index.js"></script> 
     </body>
 </html>
