--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
                     </a></li>                
                 </ul>
         </section>
-        <section id="Form">
+        <section>
             <h2>Leave a Message</h2>
             <form name="leave_message">
-                <label for="userName">User Name:</label><br>
-                <input type="text" id="userName" name="userName" required="true" /><br>
-                <label for="email">Email:</label><br>
-                <input type="email" id="email" name="usersEmail" required /><br>
+                <label for="usersName">User Name:</label><br>
+                <input type="text" id="usersName" name="usersName" required="true" /><br>
+                <label for="usersEmail">Email:</label><br>
+                <input type="email" id="usersEmail" name="usersEmail" required /><br>
                 <label for="userMessage">Message:</label> <br>               
                 <textarea name="usersMessage" id="userMessage" required></textarea><br>
                 <button type="submit">Submit</button>
