--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section id="About">
             <h2>About</h2>
                 <p>
-                    A highly skilled Front-End Developer, specializing in building responsive, scalable, and user-friendly web applications. Proficient in JavaScript (ES6+), HTML5, and CSS3, and jQuery to create seamless user experiences. Strong ability to collaborate with cross-functional teams to deliver high-quality software solutions in agile environments. Passionate about writing clean, efficient code and continuously learning new technologies to enhance web performance and usability.
+                    A passionate Front-End Developer, specializing in building responsive, scalable, and user-friendly web applications. Proficient in JavaScript (ES6+), HTML5, and CSS3, and jQuery to create seamless user experiences. Strong ability to collaborate with cross-functional teams to deliver high-quality software solutions in agile environments. Passionate about writing clean, efficient code and continuously learning new technologies to enhance web performance and usability.
 
                 </p>
         </section>
